--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,10 @@
   --transition-1: 0.25s ease;
   --transition-2: 0.5s ease-in-out;
 
+  /**
+   * padding
+   */
+  --padding-1: 15px;
 }
 
 
@@ -227,7 +231,6 @@ article.active {
 
 .article-title {
   position: relative;
-  padding-bottom: 7px;
 }
 
 .article-title::after {
@@ -631,12 +634,14 @@ li a .copy-element.active {
 
   .article-title {
     font-weight: var(--fw-600);
-    padding-bottom: 15px;
+    padding-bottom: var(--padding-1);
+    margin-bottom: 20px
   }
 
   .article-title::after {
     width: 40px;
-    height: 5px;
+    height: 4px;
+    margin-top: var(--padding-1);
   }
 
   .icon-box {
