add avatar hover animation https://github.com/Tontuu/Tontuu.github.io/issues/11

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,6 +330,15 @@ main {
   border-radius: 30px;
   overflow: hidden;
   box-shadow: var(--shadow-6);
+  transition: all .2s ease-in-out;
+}
+
+.avatar-box img {
+  transition: all .2s ease-in-out;
+}
+
+.avatar-box img:hover {
+    transform: scale(1.1) rotate(-10deg);
 }
 
 .info-content .name {
